# shard

./: Cargo.toml  README.md
crates/ryushi/: Cargo.toml
crates/ryushi-protocol/: Cargo.toml
crates/ryushi-protocol/src/: command.rs  info.rs
crates/ryushi/src/: data.rs  event_handler.rs  event_loop.rs  lib.rs  sidecar.rs  spawn.rs
docs/: README.md
