[package]
name = "ryushi-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

# serialization
serde = { version = "1.0", features = ["derive", "std"] }
serde_with = "3.9.0"
serde_json = "1.0"

# twilight
twilight-gateway = { version = "0.16", default-features = false }
twilight-model = "0.16"
