[package]
name = "ryushi"
version = "0.1.0"
edition = "2024"

[dependencies]
ryushi-protocol = { path = "../ryushi-protocol" }

chrono = { version = "0.4.38", features = ["serde"] }

# async
kameo.workspace = true

tokio = { version = "1.44", default-features = false, features = ["sync"] }

futures-util = "0.3"

# serialization
serde = { version = "1.0", features = ["derive", "std"] }

serde_json = "1.0"

# logging
tracing = "0.1"

# twilight
twilight-model = "0.16"

twilight-gateway = "0.16"
